--- a/assets/css/templatemo-lava.css
+++ b/assets/css/templatemo-lava.css
@@ -657,7 +657,7 @@ welcome
   width: 100%;
   height: 100vh;
   min-height: 793px;
-  background-image: url(../images/banner-bg.png);
+  background-image: url(images/banner-bg.png);
   background-repeat: no-repeat;
   background-position: right top;
 }
@@ -801,7 +801,7 @@ promotion
 */
 
 .left-image-decor {
-  background-image: url(../images/left-bg-decor.png);
+  background-image: url(images/left-bg-decor.png);
   background-repeat: no-repeat;
   position: absolute;
   width: 100%;
@@ -852,7 +852,7 @@ testimonials
 --------------------------------------------
 */
 .right-image-decor {
-  background-image: url(../images/right-bg-decor.png);
+  background-image: url(images/right-bg-decor.png);
   background-repeat: no-repeat;
   background-position: right center;
   position: absolute;
@@ -980,7 +980,7 @@ footer
 footer {
   margin-top: 200px;
   padding-top: 120px;
-  background-image: url(../images/footer-bg.png);
+  background-image: url(images/footer-bg.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
